--- a/GMAO/view/site_view.xml
+++ b/GMAO/view/site_view.xml
@@ -8,6 +8,7 @@
             <field name="arch" type="xml">
                 <tree string="site">
                     <field name="name" />
+                    <field name="projet"/>
                     <field name="abri"/>
 
 
@@ -23,6 +24,7 @@
                     <sheet>
                         <group colspan="4" col="4">
                             <field name="name" />
+                            <field name="projet"/>
                             <field name="abri"/>
 
                         </group>
