--- a/GMAO/view/corrective_views.xml
+++ b/GMAO/view/corrective_views.xml
@@ -120,6 +120,7 @@
                         <group colspan="4" col="4">
                               <field name="ref_mnt_corr" />
                               <field name="equipment_id" />
+                              <field name="ref_intervention" />
                               <field name="panne" />
                               <field name="date_from" />
                               <field name="date_to"/>
