rajout du motif de panne sur creation du bon de travail a partir de la cause de la maintenance corrective

--- a/GMAO/view/bon2travail.xml
+++ b/GMAO/view/bon2travail.xml
@@ -38,6 +38,7 @@
                             <field name="name" />
                             <field name="date" />
                             <field name="priority" />
+                            <field name="pannes2" />
                         </group>
                         <group colspan="1" col="2">
                             <separator string="Bon state" colspan="2" />
